# word2vec

./: .gitignore  Justfile  README.md  derivation.typ  grad_derivation.typ  main.py  pyproject.toml  pyrightconfig.json
conf/: config.yaml
models/: text8_d300_k10_e5.pkl  text8_d50_k3_e1.pkl
notebooks/: demo.ipynb
word2vec/: arithmetic.py  dataset.py  debug.py  eval.py  model.py  train.py
word2vec/config/: __init__.py  schema.py
word2vec/evaluation/: arithmetic.py  benchmark.py  debug.py  knn.py
